--- a/ayuda.html
+++ b/ayuda.html
@@ -688,6 +688,7 @@
             window.open(`https://wa.me/${phoneNumber}?text=${encodedMessage}`, '_blank');
         }
     </script>
+    <script src="support-widget-romix.js" defer></script>
     <script src="search.js"></script>
 </body>
 </html>
