--- a/index.html
+++ b/index.html
@@ -1246,6 +1246,7 @@ function applyGlobalFilters(){
 }
 document.addEventListener('DOMContentLoaded', ()=>{ initGlobalFilters(); });
 </script>
+<script src="support-widget-romix.js" defer></script>
 <script src="search.js"></script>
 </body>
 </html>
