--- a/index.html
+++ b/index.html
@@ -180,7 +180,6 @@
     <div class="header-container">
       <div class="logo" aria-label="Romix"><i class="fas fa-tshirt" aria-hidden="true"></i><span>ROMIX</span></div>
       <div class="contact-header">
-        <a href="https://wa.me/5491154272065" class="whatsapp-header" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Romix"><i class="fab fa-whatsapp" aria-hidden="true"></i> +54 9 11 5427-2065</a>
         <button type="button" class="cart-icon-btn" onclick="toggleCart()" aria-haspopup="region" aria-controls="cart" aria-expanded="false">
           <i class="fas fa-shopping-cart" aria-hidden="true"></i>
           <span>Carrito</span>
@@ -855,7 +854,15 @@
 
     // (limpieza) selectSize legacy duplicado eliminado; se usa la versión mejorada más arriba
 
-    function redirectToHelp() { window.location.href = 'ayuda.html'; }
+    function redirectToHelp() {
+      try {
+        if (window.romixSupport && typeof window.romixSupport.open === 'function') {
+          window.romixSupport.open();
+          return;
+        }
+      } catch {}
+      window.location.href = 'ayuda.html';
+    }
 
     function filterProducts(sectionId, type) {
       const section = document.getElementById(sectionId);
