--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <li><a href="#hombre"><i class="fas fa-male" aria-hidden="true"></i> Hombre</a></li>
         <li><a href="#ninos"><i class="fas fa-child" aria-hidden="true"></i> Niños</a></li>
         <li><a href="#contacto"><i class="fas fa-map-marker-alt" aria-hidden="true"></i> Contacto</a></li>
-        <li><a href="#" onclick="redirectToHelp();return false;"><i class="fas fa-question-circle" aria-hidden="true"></i> Ayuda</a></li>
+        <li><a href="ayuda.html"><i class="fas fa-question-circle" aria-hidden="true"></i> Ayuda</a></li>
       </ul>
     </div>
   </nav>
