--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
       <div class="footer-column">
         <h4>Ayuda</h4>
         <ul>
-          <li><a href="#">Guía de talles</a></li>
-          <li><a href="#">Cambios</a></li>
+          <li><a href="ayuda.html#size-guide">Guía de talles</a></li>
+          <li><a href="ayuda.html#returns">Cambios</a></li>
         </ul>
       </div>
       <div class="footer-column">
