--- a/catalogo.html
+++ b/catalogo.html
@@ -54,6 +54,7 @@
 
     function estimateStock(p){
       try {
+        if (typeof p.stock === 'number') return Math.max(0, p.stock);
         const sizes = Array.isArray(p.sizes) ? p.sizes : [];
         const perSize = sizes.reduce((t, s) => {
           const st = String(s.status||'').toLowerCase();
@@ -114,7 +115,7 @@
                 <div class="stock">Disponible<small>Stock: ${stock}</small></div>
               </div>
               <div class="actions">
-                <a class="btn btn-details" href="product.html?slug=${slug}" aria-label="Ver detalles de ${p.name}"><i class="fas fa-info-circle" aria-hidden="true"></i> Ver Detalles</a>
+                <a class="btn btn-details" href="detalle.html?slug=${slug}" aria-label="Ver detalles de ${p.name}"><i class="fas fa-info-circle" aria-hidden="true"></i> Ver Detalles</a>
                 <button class="btn btn-primary" type="button" onclick='quickAdd(${JSON.stringify({name: "__placeholder__"}).replace("\"__placeholder__\"","JSON.stringify(p)")})'><i class="fas fa-cart-plus" aria-hidden="true"></i> Agregar</button>
               </div>
             </div>
@@ -158,7 +159,7 @@
                 <div class="stock">Disponible<small>Stock: ${stock}</small></div>
               </div>
               <div class="actions">
-                <a class="btn btn-details" href="product.html?slug=${slug}" aria-label="Ver detalles de ${p.name}"><i class="fas fa-info-circle" aria-hidden="true"></i> Ver Detalles</a>
+                <a class="btn btn-details" href="detalle.html?slug=${slug}" aria-label="Ver detalles de ${p.name}"><i class="fas fa-info-circle" aria-hidden="true"></i> Ver Detalles</a>
                 <button class="btn btn-primary" type="button"><i class="fas fa-cart-plus" aria-hidden="true"></i> Agregar</button>
               </div>
             </div>`;
@@ -192,4 +193,3 @@
   </main>
 </body>
 </html>
-
