--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     .size-chip.selected { outline: 2px solid #343a40; }
     .product-selection-status { margin: 8px 0 4px; font-size: .9rem; color: #495057; }
     .btn[aria-disabled="true"] { opacity: .6; cursor: not-allowed; }
+    .btn:disabled { opacity: .6; cursor: not-allowed; }
+    .skip-link:focus { left: 12px; top: 12px; z-index: 9999; background: #fff; color: #000; padding: 8px 10px; border-radius: 8px; position: absolute; }
     /* Search */
     .global-search { display:flex; align-items:center; gap:8px; margin-left: 10px; }
     .global-search input[type="search"] { padding:6px 10px; border:1px solid #ddd; border-radius:8px; min-width: 220px; }
@@ -517,7 +519,7 @@
                 <div class="product-selection-status" aria-live="polite">Sin selección</div>
                 <div class="product-stock-note" aria-label="Stock total disponible" style="font-size:.8rem;color:#6c757d;margin-top:2px;"></div>
                 <div class="product-actions">
-                  <button class="btn btn-primary" type="button" aria-disabled="true">Comprar</button>
+                  <button class="btn btn-primary" type="button" aria-disabled="true" disabled>Comprar</button>
                 </div>
               </div>`;
 
@@ -542,7 +544,16 @@
               el.addEventListener('keydown', (e) => { if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); selectSize(el); } });
             });
             initQtyControls(card);
-            card.querySelector('.btn.btn-primary').addEventListener('click', (e) => { if (e.currentTarget.getAttribute('aria-disabled') === 'true') { e.preventDefault(); e.currentTarget.classList.add('animate__animated','animate__shakeX'); setTimeout(()=>e.currentTarget.classList.remove('animate__animated','animate__shakeX'), 500); return; } openReviewSafe(card, product); });
+            card.querySelector('.btn.btn-primary').addEventListener('click', (e) => {
+              const btn = e.currentTarget;
+              if (btn.disabled || btn.getAttribute('aria-disabled') === 'true') {
+                e.preventDefault();
+                btn.classList.add('animate__animated','animate__shakeX');
+                setTimeout(()=>btn.classList.remove('animate__animated','animate__shakeX'), 500);
+                return;
+              }
+              openReviewSafe(card, product);
+            });
             // Ir al detalle
             const toDetail = () => { const slug = (window.romixSearch && window.romixSearch.slug) ? window.romixSearch.slug(product.name) : (String(product.name||'').toLowerCase().replace(/[^a-z0-9]+/g,'-')); window.location.href = 'product.html?slug=' + encodeURIComponent(slug); };
             const imgWrap = card.querySelector('.product-image'); if (imgWrap) { imgWrap.style.cursor='pointer'; imgWrap.addEventListener('click', toDetail); }
@@ -626,11 +637,13 @@
       if (!btn) return;
       if (enabled) {
         btn.setAttribute('aria-disabled', 'false');
+        btn.disabled = false;
         btn.classList.remove('animate__shakeX');
         btn.classList.add('animate__animated','animate__fadeInUp');
         setTimeout(() => btn.classList.remove('animate__animated','animate__fadeInUp'), 500);
       } else {
         btn.setAttribute('aria-disabled', 'true');
+        btn.disabled = true;
       }
     }
 
@@ -854,15 +867,7 @@
 
     // (limpieza) selectSize legacy duplicado eliminado; se usa la versión mejorada más arriba
 
-    function redirectToHelp() {
-      try {
-        if (window.romixSupport && typeof window.romixSupport.open === 'function') {
-          window.romixSupport.open();
-          return;
-        }
-      } catch {}
-      window.location.href = 'ayuda.html';
-    }
+    
 
     function filterProducts(sectionId, type) {
       const section = document.getElementById(sectionId);
@@ -1169,7 +1174,8 @@
       message += `Total: $${cart.reduce((t, i) => t + i.subtotal, 0).toFixed(2)}`;
       const encoded = encodeURIComponent(message);
       const phone = '+5491154272065';
-      window.open(`https://wa.me/${phone}?text=${encoded}`, '_blank');
+      const w = window.open(`https://wa.me/${phone}?text=${encoded}`, '_blank');
+      if (w) w.opener = null;
     }
   </script>
 
