--- a/catalogo.html
+++ b/catalogo.html
@@ -12,6 +12,8 @@
     header { background: linear-gradient(135deg, var(--primary), var(--secondary)); color:#fff; padding:14px 0; box-shadow:0 4px 14px rgba(0,0,0,.12); }
     .header-wrap { max-width:1200px; margin:0 auto; padding:0 20px; display:flex; align-items:center; justify-content:space-between; }
     .logo { font-size:1.4rem; font-weight:900; display:flex; align-items:center; gap:8px; }
+    nav ul { list-style:none; display:flex; gap:10px; padding:0; margin:0; }
+    nav a { color:#fff; text-decoration:none; padding:8px 10px; border-radius:999px; border:1px solid rgba(255,255,255,.35); background:rgba(255,255,255,.08); }
     .cart-btn { display:inline-flex; align-items:center; gap:6px; background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.5); color:#fff; padding:8px 12px; border-radius:999px; cursor:pointer; }
     .cart-count { background: var(--danger); color:#fff; border-radius:999px; padding:0 6px; font-size:.8rem; }
 
@@ -184,6 +186,14 @@
   <header>
     <div class="header-wrap">
       <div class="logo"><i class="fas fa-store" aria-hidden="true"></i> ROMIX</div>
+      <nav aria-label="Secciones">
+        <ul>
+          <li><a href="mujer.html">Mujer</a></li>
+          <li><a href="hombre.html">Hombre</a></li>
+          <li><a href="ninos.html">Niños</a></li>
+          <li><a href="ayuda.html">Ayuda</a></li>
+        </ul>
+      </nav>
       <div>
         <button class="cart-btn" type="button" onclick="alert('Abrí el detalle de cualquier producto para finalizar compra.');">
           <i class="fas fa-shopping-cart" aria-hidden="true"></i> Carrito <span id="cart-count" class="cart-count">0</span>
