--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
   <nav aria-label="Principal">
     <div class="nav-container">
       <ul class="nav-menu">
-        <li class="active"><a href="#mujer"><i class="fas fa-female" aria-hidden="true"></i> Mujer</a></li>
-        <li><a href="#hombre"><i class="fas fa-male" aria-hidden="true"></i> Hombre</a></li>
-        <li><a href="#ninos"><i class="fas fa-child" aria-hidden="true"></i> Niños</a></li>
+        <li class="active"><a href="mujer.html"><i class="fas fa-female" aria-hidden="true"></i> Mujer</a></li>
+        <li><a href="hombre.html"><i class="fas fa-male" aria-hidden="true"></i> Hombre</a></li>
+        <li><a href="ninos.html"><i class="fas fa-child" aria-hidden="true"></i> Niños</a></li>
         <li><a href="#contacto"><i class="fas fa-map-marker-alt" aria-hidden="true"></i> Contacto</a></li>
         <li><a href="ayuda.html"><i class="fas fa-question-circle" aria-hidden="true"></i> Ayuda</a></li>
       </ul>
@@ -373,9 +373,9 @@
       <div class="footer-column">
         <h4>Productos</h4>
         <ul>
-          <li><a href="#mujer">Ropa para Mujer</a></li>
-          <li><a href="#hombre">Ropa para Hombre</a></li>
-          <li><a href="#ninos">Ropa para Niños</a></li>
+          <li><a href="mujer.html">Ropa para Mujer</a></li>
+          <li><a href="hombre.html">Ropa para Hombre</a></li>
+          <li><a href="ninos.html">Ropa para Niños</a></li>
           <li><a href="#">Novedades</a></li>
           <li><a href="#">Ofertas</a></li>
         </ul>
