--- a/ayuda.html
+++ b/ayuda.html
@@ -77,7 +77,8 @@
             #cart-count { background: var(--danger); color:#fff; border-radius:999px; padding:0 6px; font-size:.8rem; position:absolute; top:-8px; right:-8px; min-width:18px; text-align:center; }
             /* Search */
             .global-search { display:flex; align-items:center; gap:8px; margin-left: 15px; position: relative; }
-            .global-search input[type="search"] { padding:6px 10px; border:1px solid #ddd; border-radius:8px; min-width: 220px; }
+            .global-search input[type="search"] { padding:6px 10px; border:1px solid #ddd; border-radius:8px; min-width: 220px; color:#212529; background:#fff; caret-color: var(--secondary); }
+            .global-search input[type="search"]::placeholder { color:#6c757d; }
             .global-search button { padding: 7px 12px; border-radius:8px; border:1px solid var(--primary); background:#fff; color: var(--primary); cursor:pointer; }
             .search-suggestions { position:absolute; top:100%; left:0; right:0; background:#fff; border:1px solid #ddd; border-radius:8px; box-shadow:0 6px 18px rgba(0,0,0,.12); padding:6px 0; z-index:2001; }
             .search-suggestion { display:flex; align-items:center; gap:8px; padding:8px 10px; cursor:pointer; }
@@ -117,6 +118,9 @@
             border-bottom: 3px solid var(--primary);
         }
         
+        .skip-link{position:absolute;left:-9999px;top:auto}
+        .skip-link:focus{left:12px;top:12px;z-index:9999;background:#fff;color:#000;padding:8px 10px;border-radius:8px}
+
         .container {
             max-width: 1200px;
             margin: 30px auto;
@@ -361,9 +365,10 @@
     </style>
 </head>
 <body>
+    <a class="skip-link" href="#main">Saltar al contenido</a>
     <header>
         <div class="header-container">
-            <div class="logo" aria-label="Romix"><i class="fas fa-tshirt" aria-hidden="true"></i><span>ROMIX</span></div>
+            <div class="logo" aria-label="Romix"><i class="fas fa-store" aria-hidden="true"></i><span>ROMIX</span></div>
             <div class="contact-header">
                 
                 <button type="button" class="cart-icon-btn" onclick="redirectToCartPage()" aria-haspopup="region" aria-controls="cart" aria-expanded="false">
@@ -382,8 +387,8 @@
     <nav aria-label="Principal">
         <div class="nav-container">
             <ul class="nav-menu">
-                <li><a href="index.html#mujer"><i class="fas fa-female" aria-hidden="true"></i> Mujer</a></li>
-                <li><a href="index.html#hombre"><i class="fas fa-male" aria-hidden="true"></i> Hombre</a></li>
+                <li><a href="mujer.html"><i class="fas fa-female" aria-hidden="true"></i> Mujer</a></li>
+                <li><a href="hombre.html"><i class="fas fa-male" aria-hidden="true"></i> Hombre</a></li>
                 <li><a href="index.html#ninos"><i class="fas fa-child"></i> Niños</a></li>
                 <li><a href="index.html#contacto"><i class="fas fa-map-marker-alt" aria-hidden="true"></i> Contacto</a></li>
                 <li class="active"><a href="ayuda.html"><i class="fas fa-question-circle" aria-hidden="true"></i> Ayuda</a></li>
@@ -561,8 +566,8 @@
             <div class="footer-column">
                 <h4>Productos</h4>
                 <ul>
-                    <li><a href="index.html#mujer">Ropa para Mujer</a></li>
-                    <li><a href="index.html#hombre">Ropa para Hombre</a></li>
+                    <li><a href="mujer.html">Ropa para Mujer</a></li>
+                    <li><a href="hombre.html">Ropa para Hombre</a></li>
                     <li><a href="index.html#ninos">Ropa para Niños</a></li>
                     <li><a href="index.html">Novedades</a></li>
                     <li><a href="index.html">Ofertas</a></li>
