--- a/ayuda.html
+++ b/ayuda.html
@@ -372,7 +372,7 @@
     <a class="skip-link" href="#main">Saltar al contenido</a>
     <header>
         <div class="header-container">
-            <div class="logo" aria-label="Romix"><i class="fas fa-store" aria-hidden="true"></i><span>ROMIX</span></div>
+            <a href="index.html" class="logo" aria-label="Romix"><i class="fas fa-store" aria-hidden="true"></i><span>ROMIX</span></a>
             <div class="nav-inline" aria-label="Secciones">
                 <ul>
                     <li><a href="mujer.html">Mujer</a></li>
