--- a/catalogo.html
+++ b/catalogo.html
@@ -185,7 +185,7 @@
 <body>
   <header>
     <div class="header-wrap">
-      <div class="logo"><i class="fas fa-store" aria-hidden="true"></i> ROMIX</div>
+      <a href="index.html" class="logo" style="color:#fff;text-decoration:none"><i class="fas fa-store" aria-hidden="true"></i> ROMIX</a>
       <nav aria-label="Secciones">
         <ul>
           <li><a href="mujer.html">Mujer</a></li>
