--- a/detalle.html
+++ b/detalle.html
@@ -139,7 +139,7 @@
 <body>
   <header>
     <div class="header-wrap">
-      <div class="logo"><i class="fas fa-store" aria-hidden="true"></i> ROMIX</div>
+      <a href="index.html" class="logo" style="color:#fff;text-decoration:none"><i class="fas fa-store" aria-hidden="true"></i> ROMIX</a>
       <button class="cart-btn" type="button" onclick="alert('Finalizá la compra desde el carrito de la página principal.');">
         <i class="fas fa-shopping-cart" aria-hidden="true"></i>
         Carrito <span id="cart-count">0</span>
@@ -152,4 +152,3 @@
   </main>
 </body>
 </html>
-
