--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     body { background-color: #f5f5f5; color: #333; }
     header { background: linear-gradient(135deg, var(--primary), var(--secondary)); color: #fff; padding: 20px 0; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,.1); }
     .header-container { max-width: 1200px; margin: 0 auto; padding: 0 20px; display: flex; justify-content: space-between; align-items: center; }
-    .logo { font-size: 2rem; font-weight: 700; display: flex; align-items: center; gap: 10px; }
+    .logo { font-size: 2rem; font-weight: 700; display: flex; align-items: center; gap: 10px; text-decoration:none; color:#fff; }
     .contact-header { display: flex; align-items: center; gap: 10px; }
     .whatsapp-header { background-color: #25D366; color: #fff; padding: 8px 15px; border-radius: 20px; text-decoration: none; display: inline-flex; align-items: center; font-weight: 700; gap: 6px; }
     .cart-icon-btn { position: relative; display: inline-flex; align-items: center; justify-content: center; gap: 6px; padding: 8px 12px; border-radius: 20px; border: 1px solid rgba(255,255,255,.4); background: rgba(0,0,0,.1); color: #fff; cursor: pointer; }
@@ -185,7 +185,7 @@
   <a class="skip-link" href="#mujer" style="position:absolute;left:-9999px;top:auto;">Saltar al contenido</a>
   <header>
     <div class="header-container">
-      <div class="logo" aria-label="Romix"><i class="fas fa-store" aria-hidden="true"></i><span>ROMIX</span></div>
+      <a href="index.html" class="logo" aria-label="Romix"><i class="fas fa-store" aria-hidden="true"></i><span>ROMIX</span></a>
       <div class="nav-inline" aria-label="Secciones">
         <ul>
           <li><a href="mujer.html">Mujer</a></li>
