--- a/product.html
+++ b/product.html
@@ -11,9 +11,10 @@
     body { background:#f5f5f5; margin:0; color:#333; }
     header { background: linear-gradient(135deg, var(--primary), var(--secondary)); color: #fff; padding: 16px 0; }
     .header-container { max-width: 1200px; margin: 0 auto; padding: 0 20px; display:flex; align-items:center; justify-content:space-between; }
-    .logo { font-size:1.6rem; font-weight:700; display:flex; align-items:center; gap:8px; }
+    .logo { font-size:1.6rem; font-weight:700; display:flex; align-items:center; gap:8px; text-decoration:none; color:#fff; }
     .global-search { display:flex; align-items:center; gap:8px; position:relative; }
-    .global-search input[type="search"] { padding:6px 10px; border:1px solid #ddd; border-radius:8px; min-width:240px; }
+    .global-search input[type="search"] { padding:6px 10px; border:1px solid #ddd; border-radius:8px; min-width:240px; color:#212529; background:#fff; caret-color: var(--secondary); }
+    .global-search input[type="search"]::placeholder { color:#6c757d; }
     .global-search button { padding:7px 12px; border-radius:8px; border:1px solid var(--primary); background:#fff; color:var(--primary); cursor:pointer; }
     .search-suggestions { position:absolute; top:100%; left:0; right:0; background:#fff; border:1px solid #ddd; border-radius:8px; box-shadow:0 6px 18px rgba(0,0,0,.12); padding:6px 0; z-index:2001; }
     .search-suggestion { display:flex; align-items:center; gap:8px; padding:8px 10px; cursor:pointer; }
@@ -68,8 +69,8 @@
     /* Visual refresh overrides */
     body { background: #fff1f6; }
     header { box-shadow: 0 4px 14px rgba(0,0,0,.12); }
-    .global-search input[type="search"] { padding:10px 14px; border:1px solid rgba(255,255,255,.6); background:rgba(255,255,255,.15); color:#fff; border-radius:999px; min-width:260px; outline:none; }
-    .global-search input::placeholder { color:#f8f9fa; opacity:.85; }
+    .global-search input[type="search"] { padding:10px 14px; border:1px solid #ddd; background:#fff; color:#212529; border-radius:999px; min-width:260px; outline:none; }
+    .global-search input::placeholder { color:#6c757d; opacity:1; }
     .global-search button { padding:8px 14px; border-radius:999px; border:1px solid rgba(255,255,255,.6); background:#fff; color:var(--primary); cursor:pointer; font-weight:700; }
     .detail { grid-template-columns: 1.05fr .95fr; gap:28px; padding:24px; box-shadow:0 14px 36px rgba(0,0,0,.10); border-radius:14px; }
     .gallery { gap:14px; }
@@ -91,7 +92,7 @@
 <body>
   <header>
     <div class="header-container">
-      <div class="logo"><i class="fas fa-tshirt"></i> ROMIX</div>
+      <a href="index.html" class="logo"><i class="fas fa-store"></i> ROMIX</a>
       <button type="button" class="cart-icon-btn" onclick="window.location.href='index.html#cart'" aria-label="Ir al carrito">
         <i class="fas fa-shopping-cart" aria-hidden="true"></i>
         <span id="cart-count">0</span>
@@ -114,16 +115,28 @@
 
   <script>
     function slugify(s){ return (s||'').normalize('NFD').replace(/\p{Diacritic}+/gu,'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/^-+|-+$/g,''); }
+    const SIZE_GROUP_PRICING = { common: 1.0, special: 1.15, superspecial: 1.15 };
+    function groupForSize(product, size){
+      const sz = Number(size);
+      if (isNaN(sz)) return 'common';
+      if (product && Array.isArray(product.superspecialSizes) && product.superspecialSizes.map(Number).includes(sz)) return 'superspecial';
+      if (product && Array.isArray(product.specialSizes) && product.specialSizes.map(Number).includes(sz)) return 'special';
+      if (sz >= 9) return 'superspecial';
+      if (sz >= 6) return 'special';
+      return 'common';
+    }
     function getUnitPrice(product, size){
-      const base = Number(product.price)||0; const sz = Number(size);
-      if (!isNaN(sz) && product.priceByGroup){
-        let isSpecial = false;
-        if (Array.isArray(product.specialSizes)) isSpecial = product.specialSizes.map(Number).includes(sz);
-        else isSpecial = sz >= 6;
-        const group = isSpecial ? 'special' : 'common';
-        if (product.priceByGroup[group]!=null) return Number(product.priceByGroup[group]);
-      }
-      return base;
+      const base = Number(product.price)||0;
+      const group = groupForSize(product, size);
+      if (product && product.priceByGroup && product.priceByGroup[group]!=null) return Number(product.priceByGroup[group]);
+      const mult = SIZE_GROUP_PRICING[group] || 1.0; return Math.round(base * mult);
+    }
+    function updatePriceForSelection(product){
+      const priceEl = document.querySelector('.price'); if (!priceEl) return;
+      const sel = document.querySelector('#size-wrap .size-chip.selected');
+      const size = sel ? sel.dataset.size : undefined;
+      const unit = size ? getUnitPrice(product, size) : Number(product.price)||0;
+      priceEl.innerHTML = `$${Number(unit).toLocaleString('es-AR')}` + (product.originalPrice?` <small>$${Number(product.originalPrice).toLocaleString('es-AR')}</small>`:'');
     }
     function dedupSizes(arr){ const seen=new Set(); const out=[]; (arr||[]).forEach(s=>{const k=String(s.size); if(!seen.has(k)){seen.add(k); out.push(s);} }); return out; }
     function render(product){
@@ -203,11 +216,12 @@ function renderSizesForColor(colorName){
     if (state==='out') sp.classList.add('unavailable');
     if (!selectedEl && state!=='out') { sp.classList.add('selected'); selectedEl = sp; }
     sw.appendChild(sp);
-    sp.addEventListener('click', ()=>{ if(state==='out') return; sw.querySelectorAll('.size-chip').forEach(x=>x.classList.remove('selected')); sp.classList.add('selected'); });
+    sp.addEventListener('click', ()=>{ if(state==='out') return; sw.querySelectorAll('.size-chip').forEach(x=>x.classList.remove('selected')); sp.classList.add('selected'); updatePriceForSelection(product); });
   });
   if (!selectedEl && sw.firstChild) sw.firstChild.classList.add('selected');
   const label = total<=0 ? 'Agotado' : (total<=3 ? 'Por agotarse' : 'Disponible');
   if (note) note.textContent = `Stock total: ${total} (${label})`;
+  updatePriceForSelection(product);
 }
 const firstColor = (product.colors && product.colors[0]?.name) || (gallery[0].label) || 'Unico';
 renderSizesForColor(firstColor);
