--- a/ayuda.html
+++ b/ayuda.html
@@ -48,6 +48,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: relative;
         }
         
         .logo {
@@ -122,6 +123,7 @@
         .skip-link:focus{left:12px;top:12px;z-index:9999;background:#fff;color:#000;padding:8px 10px;border-radius:8px}
 
         /* Inline header links style (foto 1) */
+        .nav-inline { position: absolute; left: 50%; transform: translateX(-50%); }
         .nav-inline ul { list-style: none; display: flex; gap: 10px; padding: 0; margin: 0; }
         .nav-inline a { color: #fff; text-decoration: none; padding: 8px 10px; border-radius: 999px; border: 1px solid rgba(255,255,255,.35); background: rgba(255,255,255,.08); }
 
