--- a/catalogo.html
+++ b/catalogo.html
@@ -10,11 +10,11 @@
     * { box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
     body { margin:0; background:#fff1f6; color:#232323; }
     header { background: linear-gradient(135deg, var(--primary), var(--secondary)); color:#fff; padding:14px 0; box-shadow:0 4px 14px rgba(0,0,0,.12); }
-    .header-wrap { max-width:1200px; margin:0 auto; padding:0 20px; display:flex; align-items:center; justify-content:space-between; position:relative; }
+    .header-wrap { max-width:1200px; margin:0 auto; padding:0 20px; display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:12px; }
     .logo { font-size:1.4rem; font-weight:900; display:flex; align-items:center; gap:8px; }
-    nav ul { list-style:none; display:flex; gap:10px; padding:0; margin:0; }
-    nav a { color:#fff; text-decoration:none; padding:8px 10px; border-radius:999px; border:1px solid rgba(255,255,255,.35); background:rgba(255,255,255,.08); }
-    header nav { position:absolute; left:50%; transform:translateX(-50%); }
+    nav ul { list-style:none; display:flex; gap:16px; padding:0; margin:0; }
+    nav a { color:#fff; text-decoration:none; padding:8px 14px; border-radius:999px; border:1px solid rgba(255,255,255,.35); background:rgba(255,255,255,.08); }
+    header nav { justify-self:center; }
     .cart-btn { display:inline-flex; align-items:center; gap:6px; background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.5); color:#fff; padding:8px 12px; border-radius:999px; cursor:pointer; }
     .cart-count { background: var(--danger); color:#fff; border-radius:999px; padding:0 6px; font-size:.8rem; }
 
