--- a/product.html
+++ b/product.html
@@ -18,6 +18,8 @@
     .global-search button { padding:7px 12px; border-radius:8px; border:1px solid var(--primary); background:#fff; color:var(--primary); cursor:pointer; }
     .search-suggestions { position:absolute; top:100%; left:0; right:0; background:#fff; border:1px solid #ddd; border-radius:8px; box-shadow:0 6px 18px rgba(0,0,0,.12); padding:6px 0; z-index:2001; }
     .search-suggestion { display:flex; align-items:center; gap:8px; padding:8px 10px; cursor:pointer; }
+    .search-suggestion .t { color:#212529; }
+    .search-suggestion small { color:#6c757d; }
     .search-suggestion:hover, .search-suggestion.active { background:#f1f3f5; }
 
     .container { max-width: 1200px; margin: 24px auto; padding: 0 20px; }
