--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     .search-suggestion { display:flex; align-items:center; gap:8px; padding:8px 10px; cursor:pointer; }
     .search-suggestion i { color:#adb5bd; }
     .search-suggestion:hover, .search-suggestion.active { background:#f1f3f5; }
-    .search-suggestion .t { line-height:1.1; }
+    .search-suggestion .t { line-height:1.1; color:#212529; }
     .search-suggestion small { color:#6c757d; }
 
     :root {
